--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -67,7 +67,7 @@
     \tableofcontents
 
     % oder clearpage
-    \vspace{1cm}
+    \vspace{0.2cm}
 
     % TODO add information about git
 
@@ -78,5 +78,13 @@
     \clearpage
     \section{Anhang}
         \input{anhang.tex} % Per section? -> problematic ref
+
+
+    \section{TODOS}
+        Das doc schreiben duh :P
+        Konfliktvermeidung ansprechen -> Datenbanken vergleich mit UUID als Fremdschlüssel
+        UUIDs erwähnen
+        Code walkthrough + kommentieren
+        Titlepage überarbeiten
 
 \end{document}
