Added some information about GUI

--- a/docs/erweiterungen.tex
+++ b/docs/erweiterungen.tex
@@ -1,12 +1,13 @@
 % !TEX root = ./docs.tex
 
 \subsection{Grafische Oberfläche bei den Nutzern}
-//TODO 
-
+Wählt der Nutzer nach dem Starten des Clients die Variante mit Grafischer Benutzeroberfläche starten, ruft der Client die Methode startGui() auf. Hierbei wird ein JFrame erzeugt, auf dem im Laufe der Zeit unterschiedliche JPanels hinzugefügt und entfernt werden. Je nachdem an welchem Punkt der Nutzer sich gerade befindet werden die entsprechenden Methoden wie loginPanel() oder displayRecentConversations() für die jeweilige Funktionalität aufgerufen. \\ \\
+//TODO: Erkläen: Wie bekommt die GUI neue Chatnachrichten (eigener "Listener" Thread) \\
+//TODO (Wenn noch Platz vorhanden): startGui() erklären wie Daten aus Entites gelesen wird
 \subsection{Verwendung von Emojis}
-//TODO CLient
+Hier haben wir es uns zu nutze gemacht, dass die meisten gängigen Emojis bereits als Unicode Zeichen vorhanden sind. Durch das Verwenden der Unicode Zeichen kann eine zu versenden Nachricht weiterhin als String an eine Message Entität übergeben werden. Java wandelt den Unicode automatisch in das zugehörige Emoji um, sodass keine Icons für die Emojiauswahl oder weitere Anpassungen im Frontend nötig waren. Bei der Auswahl eines Emojis wird ein Objekt der Klasse EmojiMouseListener instanziiert, welches den entsprechenden Unicode Wert an die JTextArea anhängt. So ist es jederzeit möglich die Anzahl der Emojis zu erhöhen oder Emojis zu tauschen, indem das Gridlayout welches die Methode renderEmojiPanel() liefert angepasst wird.
 
-Auf Serverseite müssen keine Veränderungen vorgenommen werden.
+Auf Serverseite mussten hierfür keine Veränderungen vorgenommen werden.
 
 \subsection{Mehrere Chatverläufe pro Nutzer}
 //TODO
