fixed doc abbild & added add user functionality

--- a/docs/erweiterungen.tex
+++ b/docs/erweiterungen.tex
@@ -62,6 +62,8 @@ Die Größe der Primzahl n beträgt 128bit, wobei die Länge der
 Generatorprimzahl 32bit ist. Somit ergibt sich für den Chat ein 
 Schlüssel von ebenfalls 128bit.
 
+\newpage
+
 Dieses Verfahren kann mit beliebig vielen Teilnehmern durchgeführt
 werden, jedoch steigt die Anzahl der Runden linear und die Anzahl der 
 Requests quadratisch.
